# podcasts-crawler

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
airflow/dags/: podcasts_crawler.py  update_all_podcasts.py
podcasts_crawler/: __init__.py  crawler.py  extract.py  load.py  models.py  transform.py  uploader.py  utils.py
