[tool.poetry]
name = "podcasts-crawler"
version = "0.1.0"
description = "crawler and data transformations for the podcasts project"
authors = ["David Galevski <davidgalevski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.8.5"
python-podcastindex = {path = "../python-podcastindex/dist/python_podcastindex-1.11.0-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
mypy = "^1.4.1"
black = "^23.7.0"
ruff = "^0.0.284"
pre-commit = "^3.3.3"
pandas = "^2.0.3"
polars = "^0.19.2"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
